# dircifrar

./: .gitignore  LICENSE.txt  README.md  README_Mac.md  setup.py
oxido/: Cargo.toml
oxido/src/: lib.rs
src/dircifrar/: __init__.py  dirapi_crypt.py  dirapi_plain.py  dirconfig.py  dirsync.py  filecrypt.py  main.py  watchsync.py
tests/: conftest.py  test_dirconfig.py  test_dirsync.py  test_filecrypt.py
