[package]
name = "oxido"
version = "0.1.0"
authors = ["Ching-Tsun Chou <chingtsun.chou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxido"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.11.0"
features = ["extension-module"]

[dependencies]
tempfile = "3.1.0"
byteorder = "1.3.4"
sodiumoxide = "0.2.5"
